--- a/stm32g4xx_drivers_flags.h.in
+++ b/stm32g4xx_drivers_flags.h.in
@@ -19,6 +19,7 @@
 
 #cmakedefine STM32G4XX_DRIVERS_LPUART_RS485
 #cmakedefine STM32G4XX_DRIVERS_LPUART_DISABLE_TX_0
+#cmakedefine STM32G4XX_DRIVERS_LPUART_HIGH_BAUD_RATE
 
 #cmakedefine STM32G4XX_DRIVERS_RCC_HSE_ENABLE
 #cmakedefine STM32G4XX_DRIVERS_RCC_HSE_FREQUENCY_HZ         @STM32G4XX_DRIVERS_RCC_HSE_FREQUENCY_HZ@
